tests/snapshots/trait_adaptation_tests__trait_multiple_namespaced.snap
---
source: tests/trait_adaptation_tests.rs
expression: program
---
Program {
    statements: [
        Namespace {
            name: Some(
                Name {
                    parts: [
                        Token {
                            kind: Identifier,
                            span: Span {
                                start: 16,
                                end: 22,
                            },
                        },
                        Token {
                            kind: NsSeparator,
                            span: Span {
                                start: 22,
                                end: 23,
                            },
                        },
                        Token {
                            kind: Identifier,
                            span: Span {
                                start: 23,
                                end: 30,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 30,
                    },
                },
            ),
            body: Some(
                [
                    Class {
                        attributes: [],
                        modifiers: [],
                        name: Token {
                            kind: Identifier,
                            span: Span {
                                start: 43,
                                end: 50,
                            },
                        },
                        extends: None,
                        implements: [],
                        members: [
                            TraitUse {
                                attributes: [],
                                traits: [
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 65,
                                                    end: 71,
                                                },
                                            },
                                            Token {
                                                kind: NsSeparator,
                                                span: Span {
                                                    start: 71,
                                                    end: 72,
                                                },
                                            },
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 72,
                                                    end: 78,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 65,
                                            end: 78,
                                        },
                                    },
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 80,
                                                    end: 86,
                                                },
                                            },
                                            Token {
                                                kind: NsSeparator,
                                                span: Span {
                                                    start: 86,
                                                    end: 87,
                                                },
                                            },
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 87,
                                                    end: 93,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 80,
                                            end: 93,
                                        },
                                    },
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 95,
                                                    end: 101,
                                                },
                                            },
                                            Token {
                                                kind: NsSeparator,
                                                span: Span {
                                                    start: 101,
                                                    end: 102,
                                                },
                                            },
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 102,
                                                    end: 108,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 95,
                                            end: 108,
                                        },
                                    },
                                ],
                                adaptations: [],
                                doc_comment: None,
                                span: Span {
                                    start: 61,
                                    end: 115,
                                },
                            },
                        ],
                        doc_comment: None,
                        span: Span {
                            start: 37,
                            end: 117,
                        },
                    },
                ],
            ),
            span: Span {
                start: 6,
                end: 117,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 117,
    },
}
